# Error-Fingerprint

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml
efp-fixtures/: README.md  pyproject.toml
efp-fixtures/data/: all_fixtures.jsonl  csharp.jsonl  database.jsonl  elixir.jsonl  generate_fixtures.py  generic.jsonl  go.jsonl  java.jsonl  javascript.jsonl  kotlin.jsonl  network.jsonl  php.jsonl  python.jsonl  ruby.jsonl  rust.jsonl  scala.jsonl  swift.jsonl
efp-fixtures/src/efp_fixtures/: __init__.py  loader.py  schema.py
efp-fixtures/tests/: test_loader.py
efp-lite/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
efp-lite/src/efp_lite/: __init__.py  engine.py  patterns.py  server.py
efp-lite/src/efp_lite/languages/: __init__.py  base.py  generic.py  go.py  java.py  javascript.py  python.py
efp-lite/tests/: test_engine.py  test_server.py
